# TianGong-AI-Crew

./: Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_freeze.txt
.secrets/: secrets.dev.toml
src/: main.py
src/config/: config.py
src/crews/: crew.py  main.py
src/crews/research/: crew.py  main.py  train.py
src/crews/research/tools/: tavily_search.py
src/models/: models.py
src/routers/: research_router.py
